--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -35,19 +35,19 @@
     width: 100%;
     height: 100%;
     transition: background-color var(--transition-duration) var(--transition-function);
+    &:hover,
+    &:focus {
+            border-color: var(--accent-color);
+        }
 }
 
 .clients-icon {
     fill: #AFB1B8;
     transition: fill var(--transition-duration) var(--transition-function);
+    .clients-link:hover &,
+    .clients-link:focus & {
+            fill: var(--accent-color); }
 }
 
-.clients-link:hover .clients-icon,
-.clients-link:focus .clients-icon {
-    fill: var(--accent-color);
-}
 
-.clients-link:hover,
-.clients-link:focus {
-    border-color: var(--accent-color);
-}
+
