--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -33,6 +33,11 @@
     border-radius: 4px;
     padding-left: 42px;
     transition: border-color var(--transition-duration) var(--transition-function);
+
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+    }
 }
 
 .modal-form-input-icon {
@@ -41,15 +46,9 @@
     left: 12px;
     transform: translate(0, -50%);
     transition: fill var(--transition-duration) var(--transition-function);
-}
-
-.modal-form-input:focus {
-    outline: none;
-    border-color: var(--accent-color);
-}
-
-.modal-form-input:focus+.modal-form-input-icon {
-    fill: var(--accent-color);
+    .modal-form-input:focus + & {
+        fill: var(--accent-color);
+    }
 }
 
 .modal-form-input-wrapper {
@@ -71,19 +70,19 @@
     border-radius: 4px;
 
     transition: border-color var(--transition-duration) var(--transition-function);
-}
-
-.modal-form-message:focus {
-    outline: none;
-    border-color: var(--accent-color);
-}
-
-.modal-form-message::placeholder {
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.01em;
-
-    color: rgba(117, 117, 117, 0.5);
+   
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+    }
+   
+    &::placeholder {
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.01em;
+    
+        color: rgba(117, 117, 117, 0.5);
+    }
 }
 
 .modal-form-check-desc {
@@ -122,10 +121,10 @@
     top: 5px;
     left: 20px;
     opacity: 0;
-}
 
-.modal-form-check:checked+.modal-form-icon-check {
-    opacity: 1;
+    .modal-form-check:checked + & {
+        opacity: 1;
+    }
 }
 
 /* .modal-form-check:checked + .modal-form-icon {
@@ -156,9 +155,9 @@
     margin-right: auto;
     border: none;
     border-radius: 4px;
-}
 
-.modal-form-submit:hover,
-.modal-form-submit:focus {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    &:hover,
+    &:focus {
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
 }
