--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -42,16 +42,11 @@
     transition: color var(--transition-duration) var(--transition-function);
 
     color: rgba(255, 255, 255, 0.6);
-}
 
-.contact-link:hover,
-.contact-link:focus {
-    color: var(--primary-text-color-theme-dark);
-}
-
-.address-link:hover,
-.address-link:focus {
-    color: var(--primary-text-color-theme-dark);
+    &:hover,
+    &:focus {
+        color: var(--primary-text-color-theme-dark);
+    }
 }
 
 .footer {
@@ -83,22 +78,22 @@
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     transition: background-color var(--transition-duration) var(--transition-function);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+    }
 }
 
 
 .socisl-list-icone-footer {
     transition: fill var(--transition-duration) var(--transition-function);
     fill: #FFFFFF;
-}
 
-.socisl-list-link-footer:hover,
-.socisl-list-link-footer:focus {
-    background-color: var(--accent-color);
-}
-
-.socisl-list-link-footer:hover .socisl-list-icone-footer,
-.socisl-list-link-footer:focus .socisl-list-icone-footer {
-    fill: #FFFFFF;
+    .socisl-list-link-footer:hover &,
+    .socisl-list-link-footer:focus & {
+        fill: #FFFFFF;
+    }
 }
 
 .form-footer {
@@ -132,16 +127,16 @@
     background-color: var(--accent-color);
     color: var(--primary-text-color-theme-dark);
     transition: box-shadow var(--transition-duration) var(--transition-function);
+
+    &:hover,
+    &:focus {
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
 }
 
 .footer-icon-btn {
     fill: #FFFFFF;
     margin-left: 10px;
-}
-
-.footer-form-btn:hover,
-.footer-form-btn:focus {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .footer-form {
@@ -159,9 +154,10 @@
     color: var(--primary-text-color-theme-dark);
     background-color: var(--footer-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+    &:focus {
+        outline: none;
+        border-color: var(--accent-color);
+    }
 }
 
-.footer-form-input:focus {
-    outline: none;
-    border-color: var(--accent-color);
-}
