--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -11,9 +11,7 @@
 }
 
 .socisl-list-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %align;
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -49,9 +47,7 @@
 }
 
 .name {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
+    @include font(16px, 500, 19px);
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 10px;
@@ -63,8 +59,7 @@
 }
 
 .job-title {
-    font-size: 16px;
-    line-height: 1.19;
+    @include font(16px, 400, 19px);
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 16px;
