--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,7 +1,5 @@
 .pluses-icon-conteiner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %align;
     width: 270px;
     height: 120px;
     background-color: #F5F4FA;
@@ -19,17 +17,14 @@
 }
 
 .pluses-title {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
+    @include font(14px, 700, 16px);
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-bottom: 10px;
 }
 
 .plusses-text {
-    font-size: 14px;
-    line-height: 1.71;
+    @include font(14px, 400, 24px);
     letter-spacing: 0.03em;
 
     color: var(--secondary-text-colour);
