--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,8 +1,6 @@
 .logo {
     font-family: var(--secondary-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.20;
+    @include font(26px, 700, 31px);
     letter-spacing: 0.03em;
 
     color: var(--accent-color);
