--- a/sass/components/_our-works.scss
+++ b/sass/components/_our-works.scss
@@ -16,17 +16,13 @@
 }
 
 .overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %align;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 70px;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 16px;
+    @include font(14px, 700, 16px);
     align-items: center;
     text-transform: uppercase;
     vertical-align: top;
