--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -25,9 +25,7 @@
 }
 
 .filter-btn {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
+    @include font(16px, 500, 26px);
     text-align: center;
     letter-spacing: 0.03em;
     background-color: #F5F4FA;
@@ -47,16 +45,13 @@
 }
 
 .example-text {
-    font-size: 16px;
-    line-height: 1.87;
+    @include font(16px, 400, 30px);
     letter-spacing: 0.03em;
     color: var(--secondary-text-colour);
 }
 
 .example-title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
+    @include font(18px, 700, 36px);
     letter-spacing: 0.06em;
     margin-bottom: 4px;
     color: var(--primary-text-color);
@@ -89,9 +84,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
+    @include font(18px, 400, 28px);
     letter-spacing: 0.03em;
     padding: 63px 24px;
     overflow-y: scroll;
