--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -4,9 +4,7 @@
 
 .work-title,
 .team-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    @include font(36px, 700, 42px);
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
