--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ body {
   bottom: -32px;
 }
 
-.hero-title {
+.hero__title {
   font-size: 44px;
   font-weight: 900;
   line-height: 1.3636363636;
@@ -190,7 +190,7 @@ body {
   color: var(--primary-text-color-theme-dark);
 }
 
-.hero-btn {
+.hero__btn {
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 32px;
@@ -585,7 +585,7 @@ body {
   border-color: var(--accent-color);
 }
 
-.filter-list {
+.filter {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
@@ -610,7 +610,7 @@ body {
   padding: 24px 20px;
 }
 
-.filter-btn {
+.filter__btn {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.625;
@@ -622,7 +622,7 @@ body {
   padding: 6px 22px;
   transition: box-shadow var(--transition-duration) var(--transition-function), color var(--transition-duration) var(--transition-function), background-color var(--transition-duration) var(--transition-function);
 }
-.filter-btn:hover, .filter-btn:focus {
+.filter__btn:hover, .filter__btn:focus {
   color: var(--primary-text-color-theme-dark);
   background-color: var(--accent-color);
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.1);
