--- a/css/main.css
+++ b/css/main.css
@@ -593,18 +593,18 @@ body {
   justify-content: center;
 }
 
-.work-example-list {
+.work-example {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.work-example-title {
+.work-example__item {
   flex-basis: calc((100% - 60px) / 3);
   background-color: var(--primary-text-color-theme-dark);
 }
 
-.work-example-text {
+.work-example__container {
   border: 1px solid #EEEEEE;
   border-top: none;
   padding: 24px 20px;
@@ -628,7 +628,7 @@ body {
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.example-text {
+.work-example__text {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.875;
@@ -636,7 +636,7 @@ body {
   color: var(--secondary-text-colour);
 }
 
-.example-title {
+.work-example__title {
   font-size: 18px;
   font-weight: 700;
   line-height: 2;
@@ -645,24 +645,24 @@ body {
   color: var(--primary-text-color);
 }
 
-.work-example-link {
+.work-example__link {
   display: block;
   transition: box-shadow var(--transition-duration) var(--transition-function);
 }
-.work-example-link:hover, .work-example-link:focus {
+.work-example__link:hover, .work-example__link:focus {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
 
-.work-example-wrapper {
+.work-example__wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.work-link-wrapper {
+.work-example__link-wrapper {
   display: block;
 }
 
-.overlay-portfolio {
+.work-example__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -679,7 +679,7 @@ body {
   color: var(--primary-text-color-theme-dark);
   background-color: rgba(33, 150, 243, 0.9);
 }
-.work-link-wrapper:hover .overlay-portfolio, .work-link-wrapper:focus .overlay-portfolio {
+.work-example__link-wrapper:hover .work-example__overlay, .work-example__link-wrapper:focus .work-example__overlay {
   transform: translate(0, 0);
 }
 
