--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -6,19 +6,19 @@
     justify-content: center;
 }
 
-.work-example-list {
+.work-example {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
 
-.work-example-title {
+.work-example__item {
     flex-basis: calc((100% - 60px) / 3);
 
     background-color: var(--primary-text-color-theme-dark);
 }
 
-.work-example-text {
+.work-example__container {
     border: 1px solid #EEEEEE;
     border-top: none;
     padding: 24px 20px;
@@ -44,20 +44,20 @@
     }
 }
 
-.example-text {
+.work-example__text {
     @include font(16px, 400, 30px);
     letter-spacing: 0.03em;
     color: var(--secondary-text-colour);
 }
 
-.example-title {
+.work-example__title {
     @include font(18px, 700, 36px);
     letter-spacing: 0.06em;
     margin-bottom: 4px;
     color: var(--primary-text-color);
 }
 
-.work-example-link {
+.work-example__link {
     display: block;
     transition: box-shadow var(--transition-duration) var(--transition-function);
 
@@ -69,16 +69,16 @@
     }
 }
 
-.work-example-wrapper {
+.work-example__wrapper {
     position: relative;
     overflow: hidden;
 }
 
-.work-link-wrapper {
+.work-example__link-wrapper {
     display: block;
 }
 
-.overlay-portfolio {
+.work-example__overlay {
     position: absolute;
     top: 0;
     left: 0;
@@ -94,8 +94,8 @@
     color: var(--primary-text-color-theme-dark);
     background-color: rgba(33, 150, 243, 0.9);
 
-    .work-link-wrapper:hover &,
-    .work-link-wrapper:focus & {
+    .work-example__link-wrapper:hover &,
+    .work-example__link-wrapper:focus & {
         transform: translate(0, 0);
     }
 }
