--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,12 +3,12 @@
     padding-bottom: 94px;
 }
 
-.clients-title {
-    @include font(36px, 400, 42px);
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-}
+// .clients-title {
+//     @include font(36px, 400, 42px);
+//     text-align: center;
+//     letter-spacing: 0.03em;
+//     margin-bottom: 50px;
+// }
 
 .clients-list {
     display: flex;
