--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -3,9 +3,9 @@
 }
 
 .work-title,
-.team-title {
+.team-title,
+.clients-title {
     @include font(36px, 700, 42px);
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 50px;
 }
