--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
   overflow: hidden;
 }
 
-.modal-form-check-desc, .socisl-list-footer__link, .clients-link, .clients-item, .socisl-list-link, .overlay, .pluses-icon-conteiner {
+.modal-form-check-desc, .socisl-list-footer__link, .clients-link, .clients-item, .socisl-list-link, .overlay, .section__container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -88,7 +88,7 @@ body {
   border-bottom: 1px Solid #ECECEC;
 }
 
-.page-header-container {
+.page-header__container {
   display: flex;
   align-items: center;
 }
@@ -104,7 +104,7 @@ body {
   margin-left: auto;
 }
 
-.logo-header {
+.page-header__logo {
   margin-right: 93px;
 }
 
@@ -116,7 +116,7 @@ body {
   margin-right: 50px;
 }
 
-.menu__link-nav {
+.menu__link {
   position: relative;
   display: flex;
   align-items: center;
@@ -127,17 +127,17 @@ body {
   color: var(--primary-text-color);
   transition: color var(--transition-duration) var(--transition-function);
 }
-.menu__link-nav:hover, .menu__link-nav:focus {
+.menu__link:hover, .menu__link:focus {
   color: var(--accent-color);
 }
-.menu__link-nav.current {
+.menu__link.menu__link__current {
   color: var(--accent-color);
 }
-.menu__link-nav.current:hover:after {
+.menu__link.menu__link__current:hover:after {
   background-color: var(--accent-color);
 }
 
-.contact__link-nav {
+.contact__link {
   position: relative;
   display: flex;
   align-items: center;
@@ -145,28 +145,22 @@ body {
   font-weight: 500;
   line-height: 1.1428571429;
   letter-spacing: 0.02em;
-  color: var(--primary-text-color);
+  color: var(--secondary-text-colour);
   transition: color var(--transition-duration) var(--transition-function);
 }
-.contact__link-nav:hover, .contact__link-nav:focus {
+.contact__link:hover, .contact__link:focus {
   color: var(--accent-color);
 }
 
-.contact__header-link {
-  display: flex;
-  align-items: center;
-  color: var(--secondary-text-colour);
-}
-
-.contact__header-icon {
+.contact__icon {
   fill: currentColor;
   margin-right: 10px;
 }
 
-.current {
+.menu__link__current {
   color: var(--accent-color);
 }
-.current::after {
+.menu__link__current::after {
   position: absolute;
   content: "";
   left: 0;
@@ -234,7 +228,7 @@ body {
   color: var(--accent-color);
 }
 
-.logo-second {
+.logo__second {
   color: #000000;
 }
 
@@ -252,20 +246,20 @@ body {
   letter-spacing: 0.03em;
 }
 
-.pluses-icon-conteiner {
+.section__container {
   width: 270px;
   height: 120px;
   background-color: #F5F4FA;
   margin-bottom: 30px;
 }
 
-.teams-pluses-list {
+.section__list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.teams-pluses-item {
+.section__item {
   flex-basis: calc((100% - 90px) / 4);
 }
 
@@ -391,11 +385,6 @@ body {
 
 .team {
   background-color: #F5F4FA;
-}
-
-.clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .clients-list {
