--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,4 +1,4 @@
-.pluses-icon-conteiner {
+.section__container {
     @extend %align;
     width: 270px;
     height: 120px;
@@ -6,13 +6,13 @@
     margin-bottom: 30px;
 }
 
-.teams-pluses-list {
+.section__list {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
 
-.teams-pluses-item {
+.section__item {
     flex-basis: calc((100% - 90px) / 4);
 }
 
