--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -4,7 +4,7 @@
     border-bottom: 1px Solid #ECECEC;
 }
 
-.page-header-container {
+.page-header__container {
     display: flex;
     align-items: center;
 }
@@ -20,7 +20,7 @@
     margin-left: auto;
 }
 
-.logo-header {
+.page-header__logo {
     margin-right: 93px;
 }
 
@@ -32,7 +32,7 @@
     margin-right: 50px;
 }
 
-.menu__link-nav {
+.menu__link {
     position: relative;
     display: flex;
     align-items: center;
@@ -46,7 +46,7 @@
         color: var(--accent-color);
     }
 
-    &.current {
+    &.menu__link__current {
         color: var(--accent-color);
 
         &:hover:after {
@@ -55,13 +55,13 @@
     }
 }
 
-.contact__link-nav {
+.contact__link {
     position: relative;
     display: flex;
     align-items: center;
     @include font(14px, 500, 16px);
     letter-spacing: 0.02em;
-    color: var(--primary-text-color);
+    color: var(--secondary-text-colour);
     transition: color var(--transition-duration) var(--transition-function);
 
     &:hover,
@@ -70,18 +70,12 @@
     }
 }
 
-.contact__header-link {
-    display: flex;
-    align-items: center;
-    color: var(--secondary-text-colour);
-}
-
-.contact__header-icon {
+.contact__icon {
     fill: currentColor;
     margin-right: 10px;
 }
 
-.current {
+.menu__link__current {
     color: var(--accent-color);
 
     &::after {
